fix the layout issue

--- a/fe_taxnews/public/style.css
+++ b/fe_taxnews/public/style.css
@@ -18,7 +18,9 @@ body{
 	padding:0;
 	margin:0;
 	font-family:Arial, Helvetica, sans-serif;
-	background:url('../images/body-bg.jpg') no-repeat 0px 0px;
+	/* background:url('../images/body-bg.jpg') no-repeat 0px 0px; */
+	background-color: #191919;
+	opacity: 80%;
 	background-size: 100% 100%;
 }
 body a{
@@ -259,11 +261,7 @@ a.btn {color:#666; text-align: center; text-decoration: none;}
 }
 .total-news {
 	padding: 0;
-	
-	background: #00aeff;
-	margin-top: 28px;
-	height: 1299px;
-	
+	margin-top: 28px;	
 }
 .slider{
 	position:relative;
@@ -1289,6 +1287,8 @@ a.gotosingle {
 	background: #fff;
 	padding: 5px;
 	box-shadow: 0px 0px 5px #ddd;
+	width: 125px;
+	height: 125px;
 }
 img.blog:hover{
 	opacity: 0.9;
@@ -1336,6 +1336,7 @@ img.blog {
 	font-size: 0.8em;
 	background: #fff;
 	padding: 10px 12px;
+	margin-top: 10px;
 	box-shadow: 0px 0px 10px #ddd;
 	-webkit-transition: all .5s;
 	-moz-transition: all .5s;
@@ -1364,7 +1365,8 @@ img.blog {
 }
 .comments{
 	margin: 10px 0px -2px 0px;
-	border-top: 1px ridge rgb(240, 240, 240);
+	border-top: 0px ridge rgb(240, 240, 240);
+	height: 55px;
 }
 .grid.box {
 	border-bottom: 1px ridge rgb(240, 240, 240);
